--- a/app/src/main/res/layout/fragment_crime_detail.xml
+++ b/app/src/main/res/layout/fragment_crime_detail.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="16dp"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="?android:listSeparatorTextViewStyle"
-        android:text="@string/crime_title_label"/>
+        android:textAppearance="?attr/textAppearanceHeadline5"
+        android:text="@string/crime_title_label" />
 
     <EditText
         android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
+        android:importantForAutofill="no"
         android:hint="@string/crime_title_hint"
-        android:minHeight="48dp"
-        android:textColorHint="#757575" />
+        android:inputType="text" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceHeadline5"
+        android:text="@string/crime_details_label" />
 
     <Button
+        android:id="@+id/crime_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/crime_date"
-        tools:text="Wed Nov 14 11:56 EST 2018"/>
+        tools:text="Wed May 11 11:56 EST 2022" />
 
     <CheckBox
+        android:id="@+id/crime_solved"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/crime_solved"
-        android:text="@string/crime_solved_label"/>
-
-
+        android:text="@string/crime_solved_label" />
 </LinearLayout>
